# minimal_rag

./: .gitignore  README.md  config.py  embed.py  env.template  findings.txt  ingest.py  list_models.py  llm.py  memory_manager.py  metrics.py  pyproject.toml  rag.py  retrieve.py
